--- a/back/.env
+++ b/back/.env
@@ -4,7 +4,7 @@ NOM_DOMAINE = ''
 
 
 DB_NAME = 'taxiparis'
-MONGO_URI_ONLINE = "mongodb+srv://parisha:05iEn3kLChkee4so@cluster0.1esfjby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+MONGO_URI_ONLINE ="mongodb+srv://parisha:cDksJJa4a1iUdG99@cluster0.1esfjby.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
 MONGO_URI_LOCAL = 'mongodb://localhost:27017'
 
 TOKEN_SIGNATURE = 'V3l0c!RapT0r#92'
